<resources>
    <string name="app_name">CaptivePortalAutoLogin</string>
    <string name="welcome">Welcome!</string>
    <string name="setup_app_description">
        CaptivePortalAutoLogin is an app that lets your phone solve captive portals automatically.
        Captive portals are the websites which have to be solved in order to obtain internet access in public hotspots. 
        \nThis app will run in the background, 
        and as soon as you encounter a network with captive portal, 
        your operating system will notify this app and it will solve the captive portal in the background.
        If a specific network isn\'t supported, 
        you can choose CaptivePortalAutoLogin when signing in to the network 
        to capture the process and submit it to have it implemented in the next updates.
    </string>
    <string name="setup_get_started">
        To get started, 
        you will need to grant this app some permissions.
    </string>
    <string name="setup_notification">
        In order to run in the background, 
        this app needs to show a permanent notification.
        \n
        \nOn some devices it is possible to disable only the service notification category 
        without disabling the notification permission in general.
    </string>
    <string name="setup_notification_denied">
        This app cannot work without this permission.
    </string>
    <string name="setup_location">
        This app needs the location permission in order to collect the SSIDs (names) of networks with captive portals.
        Wi-Fi names can be used to deduce the location of the device, 
        which is why Android locks them behind the location permission.
        \n
        \nThis app uses the SSIDs to determine how a network can be solved
        and to record which SSIDs are supported and can be used for automatic connections in the future.
    </string>
    <string name="setup_app_data_collection">
        We collect data about successful and failed attempts to liberate a network.
        We use this data to determine working and analyze problematic networks.
        \n
        \nThe data is completely anonymized and can\'t be linked back to your device or identity at all.
        This is also why we can\'t fulfill data deletion requests.
    </string>
    <string name="status">Status</string>
    <string name="capture_captive_portal">Capture Captive Portal Login</string>
    <string name="capture_captive_portal_short">Capture Portal</string>
    <string name="capture_captive_portal_description">Log in to a Captive Portal manually and share the capture to improve the Liberator</string>
    <string name="preference_network_suggestions">Network Suggestions</string>
    <string name="preference_network_suggestions_description">Suggest automatic connection for supported networks to the OS.</string>
    <string name="preference_network_suggestions_description_simple">Automatically connect to supported networks.</string>
    <string name="preference_network_suggestions_disconnect_on_Q">\nNote: You may experience short disconnections while the suggestions are updated in the background.</string>
    <string name="preference_network_suggestions_disabled_statistics">Network Suggestions unavailable because "Send Statistics" is disabled.</string>
    <string name="preference_network_suggestions_disabled_suggestions">Network Suggestions unavailable because they were not approved by the user.</string>
    <string name="preference_network_suggestions_mac_randomization">Non-persistent MAC randomization</string>
    <string name="preference_network_suggestions_mac_randomization_description">
        For suggested networks, the MAC address will be randomized periodically. 
        This will lead to more anonymity, but also requires liberation for most connection attempts.
    </string>
    <string name="preference_network_suggestions_mac_randomization_description_force_enabled_system">MAC randomization is force-enabled by the system.</string>
    <string name="preference_network_suggestions_change_mac_now">Change MAC-Address now</string>
    <string name="preference_network_suggestions_change_mac_now_description">For suggested networks, immediately disconnect and resuggest with a different MAC-Address</string>
    <string name="preference_network_suggestions_change_mac_now_description_simple">Disconnect and reconnect with a different MAC-Address</string>
    <string name="preference_advanced_settings">Advanced Settings</string>
    <string name="service_status">Service Status</string>
    <string name="network_status">Network Status</string>
    <string name="not_connected_to_network">Not connected to Network</string>
    <string name="liberator_status">Liberator Status</string>
    <string name="preferences_automatically_liberating_captive_portals_description_on">Automatically liberating Captive Portals</string>
    <string name="preferences_automatically_liberating_captive_portals_description_off">Not automatically liberating Captive Portals</string>
    <string name="liberate_now">Liberate me now</string>
    <string name="liberate_now_description">Liberate the current Captive Portal now.\nUse this after network errors or when automatic liberating is disabled.</string>
    <string name="request_reevaluation">Request Re-evaluation</string>
    <string name="request_reevaluation_description">Ask android to re-evaluate the current Captive Portal.</string>
    <string name="capture_captive_portal_dev">Capture Captive Portal Login (dev)</string>
    <string name="capture_captive_portal_dev_description">Advanced Captive Portal Recording for developers</string>
    <string name="preference_permissions">Permissions</string>
    <string name="preference_permissions_description_granted">All permissions granted 😊</string>
    <string name="preference_permissions_description_not_granted">Please grant all permissions to use the app</string>
    <string name="preference_enable_experimental_portalliberators">Enable Experimental PortalLiberators</string>
    <string name="preference_enable_experimental_portalliberators_description_always_enabled_on_debugging_builds">Always enabled on debugging builds.</string>
    <string name="preference_enable_experimental_portalliberators_description" />
    <string name="preference_captive_test_url">Captive Portal Test Backend</string>
    <string name="preference_user_agent">User Agent</string>
    <string name="preference_send_statistics">Send Statistics</string>
    <string name="preference_send_statistics_description">Automatically send feedback about successful and failed liberation attempts</string>
    <string name="preference_send_statistics_description_off">Do not send feedback so we can\'t fix the problems</string>
    <string name="preference_send_statistics_disable_dialog_title">Disable Statistics Sharing?</string>
    <string name="preference_send_statistics_disable_dialog_description">
        We collect data about successful and failed attempts to liberate a network.
        We use this data to determine working and analyze problematic networks.
        \n
        \nIf you disable sending feedback we can\'t improve this app.
        \nYou will lose access to automatic update checks and Network Suggestions,
        since they depend on aggregated statistics data from our server.
    </string>
    <string name="invalid_url">Invalid URL</string>
    <string name="preference_api_base">api base</string>
    <string name="preference_export_logs">Export Logs</string>
    <string name="preference_debug_activities">Debug Activities</string>
    <string name="error_failed_to_share_file">Failed to share file: </string>
    <string name="share_log">Share log</string>
    <string name="saving">Saving…</string>
    <string name="saved">Saved</string>
    <string name="please_try_again">Please try again.</string>
    <string name="preference_open_app_info">Open Settings</string>
    <string name="preference_open_app_info_description">Click to open the app settings</string>
    <string name="notification_service_title">Captive Portal detection</string>
    <string name="notification_service_description">Running in background</string>
    <string name="liberating">Trying to liberate</string>
    <string name="not_connected">Not connected to network</string>
    <string name="not_in_portal">Not in captive portal</string>
    <string name="already_liberating">Already liberating</string>
    <string name="liberate_failed_no_portal">Failed to liberate: not caught in portal</string>
    <string name="liberate_success">Free at last!</string>
    <string name="liberate_failed">Failed to liberate: </string>
    <string name="timeout">timeout</string>
    <string name="unknown_portal">unknown portal</string>
    <string name="still_captured">still captured</string>
    <string name="liberate_result_unsupported_portal">Portal will not be supported</string>
    <string name="no_error_message">no error message</string>
    <string name="service_start_missing_permissions">Tried to start service with missing permission: </string>
    <string name="requested_reevaluation">Requested Re-evaluation</string>
    <string name="preference_permission_notifications">Send Notifications</string>
    <string name="preference_permission_notifications_description">Show a persistent status notification and show little messages at the bottom of the screen</string>
    <string name="preference_permission_fine_location">Fine Location</string>
    <string name="preference_permission_fine_location_description">Collect the SSID of Portals. Required for the background service</string>
    <string name="preference_permission_background_location">Background Location</string>
    <string name="preference_permission_background_location_description">Collect the SSID of Portals. Required for the background service</string>
    <string name="preference_permission_location">Location Enabled</string>
    <string name="preference_permission_location_description">Collect the SSID of Portals. Required for the background service</string>
    <string name="submit_portal">Submit recording?</string>
    <string name="submit_portal_description">
        Do you want to submit the recording of this captive portal?
        \nPlease do not share this network if you entered any kind of personal data or passwords.
    </string>
    <string name="submit_portal_confirmed">Thanks for contributing :)</string>
    <string name="submit_portal_aborted">Discarded recorded data :(</string>
    <string name="submit_log">Submit Log?</string>
    <string name="submit_log_description">
        Do you want to submit this log file for analysis?
        \nPlease note that it may contain sensitive data, such as your Wi-Fi connection history.
    </string>
    <string name="exception_occurred">"Exception occurred: "</string>
    <string name="loading">Loading…</string>
    <string name="upload_scheduled">Upload scheduled</string>
    <string name="share">Share</string>
    <string name="upload">Upload</string>
    <string name="save_to_storage">Save to SD</string>
    <string name="preference_api_base_connection_test">Test API Connection</string>
    <string name="preference_api_base_connection_test_testing">Testing…</string>
    <string name="update">Update</string>
    <string name="preference_update_check_no_update_available">No update is available. Automatic update checks are active.</string>
    <string name="preference_update_check_update_available">Update available: %1$s</string>
    <string name="preference_update_check_update_check_failed">Update check failed</string>
    <string name="preference_update_check_checking">Checking…</string>
    <string name="preference_update_check_disabled_statistics">Update check not available because "Send Statistics" has been turned off.</string>
    <string name="error_api_base_url_not_set">Error: API base URL not set</string>
</resources>