<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    tools:layout_gravity="end"
    >
    
    <ImageButton
        android:id="@+id/shareButton"
        style="@style/CaptivePortalAutoLogin.ImageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/share"
        android:src="@drawable/share_variant"
        />
    
    <ImageButton
        android:id="@+id/copyToSdButton"
        style="@style/CaptivePortalAutoLogin.ImageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/save_to_storage"
        android:src="@drawable/content_save"
        />
    
    <ImageButton
        android:id="@+id/uploadButton"
        style="@style/CaptivePortalAutoLogin.ImageButton.Accent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/upload"
        android:src="@drawable/cloud_upload"
        />

</LinearLayout>
