<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/CaptivePortalAutoLogin.Edge2EdgeFix"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".preferences.onboarding.WelcomeFragment"
    >
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/setup_padding_horizontal"
        >
        
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_launcher_foreground"
            />
        
        <TextView
            style="@style/CaptivePortalAutoLogin.Setup.Text.Heading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="@dimen/setup_padding_vertical"
            android:text="@string/welcome"
            />
        
        <TextView
            style="@style/CaptivePortalAutoLogin.Setup.Text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="@dimen/setup_padding_vertical"
            android:text="@string/setup_app_description"
            />
        
        <TextView
            style="@style/CaptivePortalAutoLogin.Setup.Text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="@dimen/setup_padding_vertical"
            android:text="@string/setup_get_started"
            />
    </LinearLayout>
    
    <include
        android:id="@+id/fab"
        layout="@layout/fab_setup_next"
        />

</androidx.coordinatorlayout.widget.CoordinatorLayout>
